--- a/footer.html
+++ b/footer.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 YourCompany. All rights reserved.</p>
+            <p>&copy; 2025 Logic Minds. All rights reserved.</p>
         </div>        
     </section>
 </section>
